--- a/sample/src/main/res/layout/activity_camera.xml
+++ b/sample/src/main/res/layout/activity_camera.xml
@@ -1,68 +1,109 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  android:orientation="vertical">
+
+  <!--<android.opengl.GLSurfaceView-->
+  <!--android:id="@+id/surfaceView"-->
+  <!--android:layout_width="match_parent"-->
+  <!--android:layout_height="match_parent"-->
+  <!--android:layout_above="@+id/bar" />-->
+
+  <!--<jp.co.cyberagent.android.gpuimage.GLTextureView-->
+  <!--android:id="@+id/surfaceView"-->
+  <!--android:layout_width="match_parent"-->
+  <!--android:layout_height="match_parent"-->
+  <!--android:layout_above="@+id/bar" />-->
+
+  <jp.co.cyberagent.android.gpuimage.GPUImageView
+    android:id="@+id/surfaceView"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:layout_centerInParent="true"
+    app:gpuimage_show_loading="true"
+    app:gpuimage_surface_type="surface_view" /> <!-- surface_view or texture_view -->
 
-    <!--<android.opengl.GLSurfaceView-->
-    <!--android:id="@+id/surfaceView"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent"-->
-    <!--android:layout_above="@+id/bar" />-->
+  <ImageView
+    android:id="@+id/img_cover"
+    android:layout_width="match_parent"
+    android:layout_height="400dp"
+    android:layout_centerInParent="true"
+    android:scaleType="fitXY" />
 
-    <!--<jp.co.cyberagent.android.gpuimage.GLTextureView-->
-    <!--android:id="@+id/surfaceView"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent"-->
-    <!--android:layout_above="@+id/bar" />-->
+  <jp.co.cyberagent.android.gpuimage.sample.widget.FocusSunView
+    android:id="@+id/focus_sun_view"
+    android:layout_width="120dp"
+    android:layout_height="140dp"
+    android:visibility="invisible" />
 
-    <jp.co.cyberagent.android.gpuimage.GPUImageView
-        android:id="@+id/surfaceView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:gpuimage_show_loading="false"
-        app:gpuimage_surface_type="texture_view" /> <!-- surface_view or texture_view -->
+  <LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/img_switch_camera"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:contentDescription="@null"
-        android:padding="10dp"
-        android:src="@drawable/ic_switch_camera"
-        tools:ignore="HardcodedText,RtlHardcoded" />
+    <Button
+      android:id="@+id/camera_flash"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="闪光灯" />
 
-    <LinearLayout
-        android:id="@+id/bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="#000000"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
+    <Button
+      android:id="@+id/switch_scale"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="切换比例" />
 
-        <SeekBar
-            android:id="@+id/seekBar"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:max="100" />
+    <Button
+      android:id="@+id/change_jiao"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:visibility="gone"
+      android:text="变焦" />
 
-        <Button
-            android:id="@+id/button_choose_filter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Choose Filter"
-            tools:ignore="HardcodedText" />
+  </LinearLayout>
 
-        <ImageButton
-            android:id="@+id/button_capture"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="@null"
-            android:src="@android:drawable/ic_menu_camera" />
-    </LinearLayout>
+
+  <ImageView
+    android:id="@+id/img_switch_camera"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_alignParentRight="true"
+    android:contentDescription="@null"
+    android:padding="10dp"
+    android:src="@drawable/ic_switch_camera"
+    tools:ignore="HardcodedText,RtlHardcoded" />
+
+  <LinearLayout
+    android:id="@+id/bar"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_alignParentBottom="true"
+    android:background="#000000"
+    android:gravity="center_vertical"
+    android:orientation="horizontal">
+
+    <SeekBar
+      android:id="@+id/seekBar"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_weight="1"
+      android:max="100" />
+
+    <Button
+      android:id="@+id/button_choose_filter"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="Choose Filter"
+      tools:ignore="HardcodedText" />
+
+    <ImageButton
+      android:id="@+id/button_capture"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:contentDescription="@null"
+      android:src="@android:drawable/ic_menu_camera" />
+  </LinearLayout>
 
 </RelativeLayout>
